SimTools: Use Java 11 isBlank